# tabmon_species_api

./: .copier-answers.yml  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
assets/: birdnet_multilingual.csv
sampling_scripts/: merged_partitioned.py  sampling_core.py  sampling_s3.py  sampling_utils.py  subsample_annotations.py
src/: config.py  dashboard.py  queries.py  selection_handlers.py  session_manager.py  session_utils.py  ui_components.py  ui_utils.py  utils.py  validation_handlers.py
src/database/: queries.py
src/handlers/: selection_handlers.py  validation_handlers.py
src/normal/: __init__.py  selection_handlers.py  session_manager.py  ui_components.py  validation_handlers.py
src/pro/: __init__.py  queries.py  selection_handlers.py  session_manager.py  ui_components.py  validation_handlers.py
src/session/: session_manager.py  session_utils.py
src/shared/: __init__.py  config.py  queries.py  session_utils.py  ui_utils.py  utils.py
src/ui/: ui_components.py  ui_utils.py
